<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meninki</string>
    <string name="just_now">только что</string>
    <string name="hello_blank_fragment">Привет пустой фрагмент</string>
    <string name="repeat_after">повторить после </string>
    <string name="send_again">Отправить снова</string>
    <string name="sign_in_with_google">Войти с помощью Google</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Pretium sed lorem id consectetur arcu tellus. Dui euismod morbi placerat aliquam facilisis blandit. Odio est duis velit scelerisque tellus cum cursus sit. Pretium euismod tellus risus facilisis at. Pharetra lacus sed elementum consequat. Nunc nec justo tellus quis at et proin. Ac neque risus velit in ante blandit.</string>
    <string name="settings">Настройки</string>
    <string name="bookmark">Избранное</string>
    <string name="subscribes">Подписки</string>
    <string name="products">Товаров</string>
    <string name="new_products">Новые заказы</string>
    <string name="new_messages">Написать сообщение</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="logout">Выйти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="change_language">Язык</string>
    <string name="choose_category">Выберите категорию</string>
    <string name="share_via">Поделиться через</string>
    <string name="subscribers">Подписчики</string>
    <string name="advertisement">Объявления</string>
    <string name="do_you_really_want_sign_out">Вы действительно хотите выйти</string>
    <string name="continuee">Продолжить</string>
    <string name="cancel">Отмена</string>
    <string name="your_text_is_empty_please_write_something">Ваш текст пустой, пожалуйста, напишите что-нибудь</string>
    <string name="you_cant_select_image_more_1">Вы не можете выбрать более одного изображения</string>
    <string name="success_upload_image">Изображение успешно загружено</string>
    <string name="success_upload">Успешно загружено </string>
    <string name="uploading_please_wait">Загрузка. Пожалуйста, подождите…</string>
    <string name="files_size_must_be_more_than_0">Размер файлов должен быть больше 0</string>
    <string name="success">Успех</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="please_give_information_completely">Пожалуйста, предоставьте полную информацию</string>
    <string name="check_internet_connection">Проверьте подключение к Интернету!</string>
    <string name="error_while_sending_comment">Ошибка при отправке комментария</string>
    <string name="error_while_uploading_image">Ошибка при загрузке изображения</string>
    <string name="please_write_your_information">Пожалуйста, заполните свою информацию</string>
    <string name="no_connection">Нет соединения</string>
    <string name="feed">Лента</string>
    <string name="home">Главная</string>
    <string name="Ads">Объявления</string>
    <string name="your_image_or_text_is_empty">Ваше изображение или текст пусты</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="shops">Магазины</string>
    <string name="bottom_sheet_post_hint">Чтобы закрыть это меню, смахните шторку вниз.</string>
    <string name="july_7_2023_12_00">7 июля 2023 г. 12:00</string>
    <string name="like">Нравится</string>
    <string name="download">Скачать</string>
    <string name="go_to_product">Перейти к товару</string>
    <string name="share">Поделиться</string>
    <string name="post_authors_go_to_store">Перейти в магазин автора</string>
    <string name="complain">Пожаловаться</string>
    <string name="choose_media">Выберите медиа</string>
    <string name="image">Изображение</string>
    <string name="video">Видео</string>
    <string name="new_post">Новый пост</string>
    <string name="media">Медиа</string>
    <string name="description_optional">Описание (необязательно)</string>
    <string name="new_product">Новый товар</string>
    <string name="name">Название</string>
    <string name="title_optional">Заголовок (необязательно)</string>
    <string name="description">Описание</string>
    <string name="choose_shop">Выберите магазин</string>
    <string name="price">Цена</string>
    <string name="price_smal">Цена</string>
    <string name="necessary_layer">Обязательное поле</string>
    <string name="discount_price">Цена со скидкой</string>
    <string name="optinal">Необязательно</string>
    <string name="count">Количество</string>
    <string name="characteristics_product">Характеристики товара</string>
    <string name="description_add_characteristic_product">Здесь вы можете добавить характеристики к вашему товару и создать вариации для каждой характеристики. Далее прочтите справку.</string>
    <string name="edit_prices">Редактировать цены</string>
    <string name="edit_characteristics">Редактировать характеристики</string>
    <string name="send">Отправить</string>
    <string name="wariants">вариантов</string>
    <string name="sample_title">Очки как у Николаса Кейджа, размер для толковых</string>
    <string name="go_to_store">Перейти в магазин</string>
    <string name="description_">Описание:</string>
    <string name="category">Категория</string>
    <string name="phone_num">Номер телефона</string>
    <string name="_2">дня назад</string>
    <string name="what_language_do_u_speak">На каком языке вы говорите?</string>
    <string name="after_registration_can_you_chane_it">После регистрации вы сможете изменить язык.</string>
    <string name="choose_lang">Выберите язык</string>
    <string name="rus">Русский</string>
    <string name="skip">Пропустить</string>
    <string name="tell_about_yourself">Расскажите о себе</string>
    <string name="only_image_other_optional">Достаточно только имени. Фотографию и подробные данные о себе вы сможете добавить позже.</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="enter_username">Введите имя пользователя</string>
    <string name="finsh">Завершить</string>
    <string name="new_shop">Новый магазин</string>
    <string name="title_shop">Название магазина</string>
    <string name="enter_name_store">Введите название магазина</string>
    <string name="username">Имя пользователя</string>
    <string name="unique_name_for_store">Уникальное имя для магазина</string>
    <string name="category_store">Категория магазина</string>
    <string name="more_information">Дополнительная информация</string>
    <string name="des_new_shop">Укажите дополнительные параметры: описание магазина (приветствие), дополнительные контакты и ссылки на социальные сети и веб-сайты.</string>
    <string name="email">Email</string>
    <string name="website">Веб-сайт</string>
    <string name="publish">Опубликовать</string>
    <string name="stores">Магазины</string>
    <string name="pictures">Картинки</string>
    <string name="next">Далее</string>
    <string name="name_store">Магазин-название</string>
    <string name="add_post_using_it">Создать пост с его использованием</string>
    <string name="store">Магазин</string>
    <string name="my_stores">Мои магазины</string>
    <string name="contacts">Контакты</string>
    <string name="place_rating">Место в общем рейтинге</string>
    <string name="visitors">Посетители</string>
    <string name="search">Поиск</string>
    <string name="enter_prices">Введите цену или цену со скидкой. Здесь есть справка о логике добавления цен.</string>
    <string name="save">Сохранить</string>
    <string name="enter_code_sent_to_number">Введите код, отправленный на номер</string>
    <string name="resend_again_until">Переотправить через: 0:13</string>
    <string name="privacy_policy">Продолжая, вы соглашаетесь с условиями конфиденциальности и пользовательским соглашением.</string>
    <string name="users">Пользователи</string>
    <string name="no_content">Нет контента</string>
    <string name="my_follows">Мои подписки</string>
    <string name="characteristics">Характеристики</string>
    <string name="text_description">Текстовое описание</string>
    <string name="photo">Фото</string>
    <string name="add_more_medi">Добавить еще медиа</string>
    <string name="waiting_orders">Ожидающие заказы</string>
    <string name="new_message">Новое сообщение</string>
    <string name="views">Просмотры</string>
    <string name="total_rating">Общий рейтинг</string>
    <string name="more_statics">Более подробная статистика</string>
    <string name="enter_price_here">Введите цену здесь</string>
    <string name="enter_discount_price_here">Введите цену со скидкой здесь</string>
    <string name="sample_desc">Купила очки как у моего брата! Очень недорого, продавала старушка на ВДНХ. Качество хорошее, цвет точно такой же</string>
    <string name="ok">OK</string>
    <string name="add_store">Добавить\n магазин</string>
    <string name="card">Корзина</string>
    <string name="do_you_really_want_delete_account">Вы действительно хотите удалить аккаунт?</string>
    <string name="posts">Обзоры</string>
    <string name="see_advertisement">Посмотреть объявления</string>
    <string name="new_add">Новое объявление</string>
    <string name="advertisement_desc">Введите описание т овара или информацию о его состоянии</string>
    <string name="region_or_city">Регион или город</string>
    <string name="all_turkmenistan">Весь Туркменистан</string>
    <string name="went_error">Произошла ошибка!</string>
    <string name="minutes_ago">минут назад</string>
    <string name="hours_ago">часов назад</string>
    <string name="days_ago">дней назад</string>
    <string name="edit_shop">Редактировать магазин</string>
    <string name="delete_shop">Delete Shop</string>
    <string name="do_you_really_want_delete_shop">Do you really want to delete your shop</string>
    <string name="popular">Популярное</string>
    <string name="news">Новинки</string>
    <string name="sort_by_date">По дате - сначала новые</string>
    <string name="sort_by_view_count">Сортировать по количеству просмотров</string>
    <string name="sort_by_rating">Сортировать по рейтингу</string>
    <string name="sort_by_price">Сортировать по цене</string>
    <string name="price_to">Цена до</string>
    <string name="price_from">Цена от</string>
    <string name="clear_filter">Очистить фильтр</string>
    <string name="velayat">Велаят</string>
    <string name="sort_elements">Сортировка элементов</string>
    <string name="ashgabat">Ашгабат</string>
    <string name="show_result">Показать</string>
    <string name="filter_and_sort">Фильтр и сортировка</string>
    <string name="authorisation">Авторизация</string>


    <string-array name="array">
        <item>Вариант</item>
        <item>Вариант</item>
        <item>Вариант</item>
        <item>Вариант</item>
    </string-array>

</resources>