<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/top_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/what_language_do_u_speak"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="90dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/after_registration_can_you_chane_it"
            android:textColor="@color/contrast"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/choose_lang"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/select_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:drawableEnd="@drawable/ic_chevron__1_"
            android:drawableTint="@color/neutral_dark"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_vertical"
            android:paddingVertical="15dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/rus"
            android:textColor="@color/neutral_dark" />


        <TextView
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/skip"
            android:textColor="@color/bg" />


    </LinearLayout>

</RelativeLayout>