<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center_vertical"
        android:text="@string/characteristics"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/text_effects"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp"
        android:text="@string/text_description"
        android:textColor="@color/contrast" />

    <TextView
        android:id="@+id/photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/image"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter_medium"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp"
        android:text="@string/photo"
        android:textColor="@color/contrast" />

</LinearLayout>